# Romeo

./: .gitignore  CMakeLists.txt  LEGGETEMI.txt  helpdialog.cpp  helpdialog.h  helpdialog.ui
data/: features.xml
ext/: cluster.cpp  cluster.h  fcm.cpp  features.cpp  features.h  hierarchical.c
ext/C Cluster src corretto/: MAINPROVA.c  cluster.c  fcm.cpp
ext/C Cluster src corretto/ProvaMaskFCM/: MAINPROVA.c  fcm.cpp
installer/: .gitignore
installer/configure/: config.xml
installer/romeo/: README.txt
src/: immagini.qrc  main.cpp
src/doc/: BasicNotions.html  ContactUs.html  FAQ.html  InstructionsForUse.html  Introduction.html  LinksVideoManual.html  PossibleErrors.html  Style.css  Tips&Tricks.html  TipsTricks.html  help.html  style.css
src/romeo/controller/: abouthelpcontroller.cpp  abouthelpcontroller.h  algorithmscontroller.cpp  algorithmscontroller.h  analysiscontroller.cpp  analysiscontroller.h  controller.cpp  controller.h  featurescontroller.cpp  featurescontroller.h  protocolscontroller.cpp  protocolscontroller.h
src/romeo/model/: inputformats.h  settings.cpp  settings.h
src/romeo/model/core/: loader.cpp  loader.h  modelcore.cpp  modelcore.h  writer.cpp  writer.h
src/romeo/model/datasets/: abstractdataset.cpp  abstractdataset.h  abstractsubject.cpp  abstractsubject.h  dataset2d.cpp  dataset2d.h  dataset2dt.cpp  dataset2dt.h  dataset3d.cpp  dataset3d.h  dataset3dt.cpp  dataset3dt.h  datasetslist.cpp  datasetslist.h  result.cpp  result.h  subject2d.cpp  subject2d.h  subject2dt.cpp  subject2dt.h  subject3d.cpp  subject3d.h  subject3dt.cpp  subject3dt.h
src/romeo/model/imageIO/: handlerio.cpp  handlerio.h  handlerio2d.cpp  handlerio2d.h  handlerio3d.cpp  handlerio3d.h  handleriodynamic.cpp  handleriodynamic.h  handleriostatic.cpp  handleriostatic.h
src/romeo/model/protocols/: abstractprotocol.cpp  abstractprotocol.h  color.cpp  color.h  dynamicprotocol.cpp  dynamicprotocol.h  handleriostatic.h  protocolslist.cpp  protocolslist.h  staticprotocol.cpp  staticprotocol.h
src/romeo/model/protocols/algorithms/: abstractalgorithm.cpp  abstractalgorithm.h  algorithmslist.cpp  algorithmslist.h  fuzzycmeans.cpp  fuzzycmeans.h  hierarchical.cpp  hierarchical.h  kmeans.cpp  kmeans.h  userdefinedalgorithm.cpp  userdefinedalgorithm.h
src/romeo/model/protocols/features/: abstractfeature.cpp  abstractfeature.h  abstractstaticfeature.cpp  abstractstaticfeature.h  dynamicfeature.cpp  dynamicfeature.h  featureslist.cpp  featureslist.h  firstorderfeature.cpp  firstorderfeature.h  secondorderfeature.cpp  secondorderfeature.h
src/romeo/view/: viewmanager.cpp  viewmanager.h
src/romeo/view/dialogs/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addsubjectdialog.cpp  addsubjectdialog.h  addsubjectdialog.ui  algorithmslistdialog.cpp  algorithmslistdialog.h  algorithmslistdialog.ui  associateprotocoldialog.cpp  associateprotocoldialog.h  associateprotocoldialog.ui  executedialog.cpp  executedialog.h  executedialog.ui  featureslistdialog.cpp  featureslistdialog.h  featureslistdialog.ui  helpdialog.cpp  helpdialog.h  helpdialog.ui  newalgorithmdialog.cpp  newalgorithmdialog.h  newalgorithmdialog.ui  newalgorithmparameterform.cpp  newalgorithmparameterform.h  newalgorithmparameterform.ui  newdatasetdialog.cpp  newdatasetdialog.h  newdatasetdialog.ui  newfeaturedialog.cpp  newfeaturedialog.h  newfeaturedialog.ui  parametervalueform.cpp  parametervalueform.h  parametervalueform.ui  protocoldialog.cpp  protocoldialog.h  protocoldialog.ui
src/romeo/view/mainWindow/: datasetpanel.cpp  datasetpanel.h  datasetpanel.ui  datasetsexplorer.cpp  datasetsexplorer.h  datasetsexplorer.ui  executepanel.cpp  executepanel.h  executepanel.ui  explorer.cpp  explorer.h  explorer.ui  filesystemexplorer.cpp  filesystemexplorer.h  filesystemexplorer.ui  listview.cpp  listview.h  listwidget.cpp  listwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocolsexplorer.cpp  protocolsexplorer.h  protocolsexplorer.ui  protocolspanel.cpp  protocolspanel.h  protocolspanel.ui  subjectspanel.cpp  subjectspanel.h  subjectspanel.ui
tests/: CMakeLists.txt  TestCheckValidity.cpp  TestCheckValidity.h  TestParameterValueForm.cpp  TestParameterValueForm.h  testabstractalgorithm.cpp  testabstractalgorithm.h  testabstractdataset.cpp  testabstractdataset.h  testabstractsubject.cpp  testabstractsubject.h  testaddsubjectdialog.cpp  testaddsubjectdialog.h  testalgorithmscontroller.cpp  testalgorithmscontroller.h  testalgorithmslist.cpp  testalgorithmslist.h  testcolor.cpp  testcolor.h  testcontroller.cpp  testcontroller.h  testdataset2d.cpp  testdataset2d.h  testdataset2dt.cpp  testdataset2dt.h  testdataset3d.cpp  testdataset3d.h  testdataset3dt.cpp  testdataset3dt.h  testdatasetslist.cpp  testdatasetslist.h  testdynamicfeature.cpp  testdynamicfeature.h  testdynamicprotocol.cpp  testdynamicprotocol.h  testexecutedialog.cpp  testexecutedialog.h  testexecutepanel.cpp  testexecutepanel.h  testfeaturescontroller.cpp  (+54 more)
tests/data/: features.xml
tests/images/: image.tif  image3d_mask.nii  mask.tif  video.avi
